--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "package": "pkg . --targets node16-macos-x64 --output movies"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -52,6 +53,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "pkg": "^5.8.1",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -80,5 +82,12 @@
   },
   "engines": {
     "node": ">= 16"
+  },
+  "bin": {
+    "movies": "./dist/main.js"
+  },
+  "pkg": {
+    "scripts": "dist/**/*.js",
+    "assets": "node_modules/swagger-ui-dist/**/*.css"
   }
 }
